<resources>
    <string name="app_name">Rulebook</string>
    <string name="app_name_mainactivity">Rulebook: Меню</string>
    <string name="app_name_credits">Rulebook: О Приложении</string>
    <string name="app_name_chooseyourdestiny">Rulebook: Правила</string>
    <string name="app_name_mainrules">Rulebook: Основы</string>
    <string name="app_name_schemesandtables">Rulebook: В схемах и таблицах</string>
    <string name="app_name_lexicon">Rulebook: Лексика</string>
    <string name="app_name_rating">Rulebook: Отзыв</string>
    <string name="app_name_logging">Rulebook: Логгирование</string>
    <string name="app_name_search">Rulebook: Поиск</string>
    <string name="app_name_settings">Rulebook: Настройки</string>
    <string name="app_name_status">Rulebook: Страница состояния</string>
    <string name="app_name_analyze_methods">Rulebook: Виды разборов</string>
    <string name="app_dev_email" translatable="false">silvenation@gmail.com</string>
    <string name="app_dev_part1" translatable="false">Оценка пользователя--</string>
    <string name="app_dev_part2" translatable="false">/5.0 звёзд</string>
    <string name="app_pixels" translatable="false">pixels</string>
    <string name="app_inches" translatable="false">inches</string>
    <string name="app_dpi" translatable="false">dpi</string>
    <string-array name="locales">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="locale_values">
        <item>Ru</item>
        <item>En</item>
    </string-array>
    <string name="review_device_name">Устройство:</string>
    <string name="review_device_manufacter">Изготовитель:</string>
    <string name="review_device_model">Модель:</string>
    <string name="review_oc_name">Наименование версии ОС:</string>
    <string name="review_device_sdk_version">Версия SDK вашего устройства:</string>
    <string name="review_device_hardware">Железо:</string>
    <string name="review_device_current_dpi_value">DPI:</string>
    <string name="review_device_brand">Бренд:</string>
    <string name="review_device_fingerprint">Биометрия:</string>
    <string name="review_device_serial">Серийный номер:</string>
    <string name="review_device_android_version">Версия Андроида:</string>
    <string name="review_device_screen_resolution">Разрешение экрана:</string>
    <string name="app_status_details_headline">Дополнительная информация</string>
    <string name="app_status_value_null">пусто</string>
    <string name="app_status_reset_all">Сбросить</string>
    <string name="app_status_voicesearch_boolean_state">Голосовой ввод:</string>
    <string name="app_status_anim_boolean_state">Анимации:</string>
    <string name="app_status_page_boolean_state">Страница состояния:</string>
    <string name="app_statusbar_boolean_state">Строка состояния:</string>
    <string name="app_autohidebottomappbar_boolean_state">Контроль всплывающей панели навигации:</string>
    <string name="app_status_boolean_state_yes">ДА</string>
    <string name="app_status_boolean_state_no">НЕT</string>
    <string name="app_choose_email_client">Выберите почтовый клиент</string>
    <string name="app_status_page">Страница состояния</string>
    <string name="app_status_page_headline">Статус</string>
    <string name="app_launch_basics">Основы</string>
    <string name="app_launch_basics_extended">Орфография и Пунктуация</string>
    <string name="app_launch_lexicon">Лексика</string>
    <string name="app_launch_lexicon_extended">Правила лексики</string>
    <string name="app_launch_debug">Логи</string>
    <string name="app_launch_debug_extended">Логгирование</string>
    <string name="app_launch_schemes_and_tables_extended">В схемах и таблицах</string>
    <string name="app_launch_schemes_and_tables">В таблицах</string>
    <string name="app_launch_analyze">Разборы</string>
    <string name="app_launch_analyze_extended">Виды разборов</string>
    <string name="app_launch_ic_launch_search_rules">Поиск</string>
    <string name="app_launch_ic_launch_search_rules_extended">Быстрый доступ</string>
    <string name="hello_trigger">Нету смысла пересобирать это apk-файл. Исходный код открыт для любого пользователя.</string>
    <string name="app_themepickerpreviewtitle">Текст</string>
    <string name="voicesearch">Голосовой Ввод</string>
    <string name="disable_voicesearch">Отключить голосовой ввод</string>
    <string name="app_themes_extended">Выберите одну из тем или создайте свою</string>
    <string name="app_themes">Визуальное оформление</string>
    <string name="app_disable_some_animations">Анимации</string>
    <string name="app_disable_some_animations_extended">Отключить некоторые анимации (Повышает скорость работы приложения)</string>
    <string name="app_enable_statusbar">Строка состояния</string>
    <string name="app_enable_statusbar_extended">Не скрывать строку состояния</string>
    <string name="app_autohide_bottomappbar">Всплывающая панель навигации</string>
    <string name="app_autohide_bottomappbar_extended">Автоматически скрывать всплывающую панель навигации (При скроллинге вверх и вниз, соответственно)</string>
    <string name="app_prefs_warning_extended">После введённых изменений, для корректного отображения интерфейса может потребоваться перезагрузка. Для этого достаточно нажать сюда.</string>
    <string name="app_prefs_warning">Перезагрузка</string>
    <string name="app_locale_select">Язык</string>
    <string name="app_locale_select_extended">Выберите язык</string>
    <string name="app_edittext_is_empty">Напишите что-нибудь</string>
    <string name="rules">Правила</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="app_exit">Выход</string>
    <string name="app_theme_choose">Тема</string>
    <string name="app_about_extended">Стабильная версия. Статус: release. Версия: 1.0.1. Сборка: 101.</string>
    <string name="app_about_name">Словарь - Русский Язык</string>
    <string name="search_main">Поиск</string>
    <string name="intent_to_main">Главная</string>
    <string name="search_actionbar">Поиск</string>
    <string name="exit_actionbar">Выход</string>
    <string name="rate_us_headline">Отзыв</string>
    <string name="rate_us">Оцените приложение</string>
    <string name="write_a_review">Напишите отзыв</string>
    <string name="send_review_to_developer">Отправить отзыв</string>
    <string name="app_loading">Загрузка…</string>
    <string name="settings_actionbar">Настройки</string>
    <string name="about_actionbar">О Приложении</string>
    <string name="rulebook_main">Словарь</string>
    <string name="are_you_sure">Уверены?</string>
    <string name="tap_again_to_exit">Нажмите ещё раз чтобы выйти</string>
    <string name="tap_three_times">Нажмите ещё три раза</string>
    <string name="tap_two_times">Нажмите ещё два раза</string>
    <string name="tap_again">Нажмите ещё один раз</string>
    <string name="yes_and_reset">Сбросить настройки</string>
    <string name="accept">Принять</string>
    <string name="cancel">Отменить</string>
    <string name="main_page">Главная</string>
    <string name="need_to_install_google_voice">Необходимо установить Голосовой Поиск Google</string>
    <string name="we_are_listening_you">Слушаю</string>
    <string name="accept_and_install">Установить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="have_read">Прочитал</string>
    <string name="error_while_reading_a_file">Возникла ошибка при попытке чтения файла</string>
    <string name="category_pref_interface">Интерфейс</string>
    <string name="category_pref_functions">Функции</string>
    <string name="category_pref_others">Другое</string>
    <string name="search_viewhint">Поисковая строка</string>
    <string name="searchword_view_hint">Слово</string>
    <string name="app_next">Далее</string>
    <string name="choosemode">Выберите режим</string>
    <string name="app_error_while_saving_file">Ошибка при попытке сохранения файла</string>
    <string name="app_save">Сохранить</string>
    <string name="app_save_in_process">Сохранение…</string>
    <string name="app_saved">Сохранено</string>
    <string name="app_saved_already">Файл был сохранён ранее</string>
    <string name="compose_disabled_message">Ярлык недоступен по неизвестной причине.</string>
    <string name="error_while_reading_theme">Ошибка при попытке чтения темы</string>
    <string name="bottomsheetdialog_betweenactivities_headline">Меню быстрого доступа</string>
    <string name="main_rules">Основные</string>
    <string name="analyze_methods">Виды разборов</string>
    <string name="ortho">Орфография</string>
    <string name="punct">Пунктуация</string>
    <string name="ortho_9">Правописание сложных слов</string>
    <string name="ortho_16">Правописание союзов</string>
    <string name="ortho_18">Правописание междометий и звукоподрожательных слов</string>
    <string name="ortho_19">Правописание некоторых иностранных слов</string>
    <string name="ortho_15">Знаки препинания при цитатах</string>
    <string name="punct_5">Знаки препинания в предложениях с обособленными членами</string>
    <string name="punct_6">Знаки препинания в предложениях с уточняющими, пояснительными и присоединительными членами</string>
    <string name="punct_7">Знаки препинания при словах, грамматически не связанных с членами предложения</string>
    <string name="ortho_9_36">Сложные слова с соединительными гласными</string>
    <string name="ortho_9_37">Сложные слова без соединительной гласной</string>
    <string name="ortho_9_38">Сложные существительные</string>
    <string name="ortho_9_39">Сложные прилагательные</string>
    <string name="punct_5_18">Обособленные определения</string>
    <string name="punct_5_19">Обособленные приложения</string>
    <string name="punct_5_20">Обособленные обстоятельства</string>
    <string name="punct_5_21">Обособленные дополнения</string>
    <string name="punct_6_22">Уточняющие члены предложения</string>
    <string name="punct_6_23">Пояснительные конструкции</string>
    <string name="punct_6_24">Присоединительные конструкции</string>
    <string name="punct_7_25">Вводные слова и словосочетания</string>
    <string name="punct_7_26">Вводные и вставные конструкции</string>
    <string name="punct_7_27">Обращения</string>
    <string name="phonetic_analyze_method">Фонетический разбор</string>
    <string name="morphemic_analyze_method">Разбор слова по составу (морфемный анализ)</string>
    <string name="morphological_analyze_method_for_noun">Морфологический разбор имени существительного</string>
    <string name="morphological_analyze_method_for_verb">Морфологический разбор глагола</string>
    <string name="morphological_analyze_method_for_adjective">Морфологический разбор имени прилагательного</string>
    <string name="morphological_analyze_method_for_numeral">Морфологический разбор имени числительного</string>
    <string name="morphological_analyze_method_for_adverb">Морфологический разбор наречия</string>
    <string name="morphological_analyze_method_for_participle">Морфологический разбор причастия</string>
    <string name="morphological_analyze_method_for_participle2">Морфологический разбор деепричастия</string>
    <string name="morphological_analyze_method_for_pretext">Морфологический разбор предлога</string>
    <string name="morphological_analyze_method_for_union">Морфологический разбор союза</string>
    <string name="morphological_analyze_method_for_particle">Морфологический разбор частицы</string>
    <string name="syntactic_analyze_method_for_simple_sentence">Cинтаксический разбор простого предложения</string>
    <string name="syntactic_analyze_method_for_difficult_sentence">Синтаксический разбор сложного предложения</string>
    <string name="lexical_analyze_method_for_everyword">Лексический разбор слова</string>
    <string name="orthographic_analyze_method_for_everyword">Орфографический разбор</string>
</resources>