<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/analyze_methods_layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.verNANDo57.rulebook_educational.rules.analyze_methods.AppAnalyzeMethods">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_in_analyze_methods_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_toolbar_height"
        android:background="@drawable/app_toolbar"
        android:layout_margin="@dimen/app_toolbar_margin"
        app:navigationIcon="@drawable/ic_view_list_black"
        app:title="@string/analyze_methods" />

    <ScrollView
        android:id="@+id/analyze_methods_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_in_analyze_methods_layout">

        <LinearLayout
            android:id="@+id/analyze_methods_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/phonetic_analyze_method_btn"
                style="@style/RulebookButtonEveryThemeTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="phonetic_analyze_method_btn"
                android:text="@string/phonetic_analyze_method" />

            <Button
                android:id="@+id/morphemic_analyze_method_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphemic_analyze_method_btn"
                android:text="@string/morphemic_analyze_method" />

            <Button
                android:id="@+id/morphological_analyze_method_for_noun_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_noun_btn"
                android:text="@string/morphological_analyze_method_for_noun" />

            <Button
                android:id="@+id/morphological_analyze_method_for_verb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_verb_btn"
                android:text="@string/morphological_analyze_method_for_verb" />

            <Button
                android:id="@+id/morphological_analyze_method_for_adjectve_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_adjective_btn"
                android:text="@string/morphological_analyze_method_for_adjective" />

            <Button
                android:id="@+id/morphological_analyze_method_for_numeral_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_numeral_btn"
                android:text="@string/morphological_analyze_method_for_numeral" />

            <Button
                android:id="@+id/morphological_analyze_method_for_adverb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_adverb_btn"
                android:text="@string/morphological_analyze_method_for_adverb" />

            <Button
                android:id="@+id/morphological_analyze_method_for_participle_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_participle_btn"
                android:text="@string/morphological_analyze_method_for_participle" />

            <Button
                android:id="@+id/morphological_analyze_method_for_participle2_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_participle2_btn"
                android:text="@string/morphological_analyze_method_for_participle2" />

            <Button
                android:id="@+id/morphological_analyze_method_for_pretext_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_pretext_btn"
                android:text="@string/morphological_analyze_method_for_pretext" />

            <Button
                android:id="@+id/morphological_analyze_method_for_union_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_union_btn"
                android:text="@string/morphological_analyze_method_for_union" />

            <Button
                android:id="@+id/morphological_analyze_method_for_particle_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="morphological_analyze_method_for_particle_btn"
                android:text="@string/morphological_analyze_method_for_particle" />

            <Button
                android:id="@+id/syntactic_analyze_method_for_simple_sentence_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="syntactic_analyze_method_for_simple_sentence_btn"
                android:text="@string/syntactic_analyze_method_for_simple_sentence" />

            <Button
                android:id="@+id/syntactic_analyze_method_for_difficult_sentence_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="syntactic_analyze_method_for_difficult_sentence_btn"
                android:text="@string/syntactic_analyze_method_for_difficult_sentence" />

            <Button
                android:id="@+id/lexical_analyze_method_for_everyword_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="lexical_analyze_method_for_everyword_btn"
                android:text="@string/lexical_analyze_method_for_everyword" />

            <Button
                android:id="@+id/orthographic_analyze_method_for_everyword_btn"
                style="@style/RulebookButtonEveryThemeBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="orthographic_analyze_method_for_everyword_btn"
                android:text="@string/orthographic_analyze_method_for_everyword" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>