<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/punctuationButton4_container"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punct_5"
        android:id="@+id/punctuationButton5"/>

    <LinearLayout
        android:id="@+id/punctuationButton5_sub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:id="@+id/punct5mainButton1"
            style="@style/RulebookButtonEveryThemeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_5_18" />

        <Button
            android:id="@+id/punct5mainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_5_19" />

        <Button
            android:id="@+id/punct5mainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_5_20" />

        <Button
            android:id="@+id/punct5mainButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_5_21"
            style="@style/RulebookButtonEveryThemeBottom"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>