<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@id/orthographyButton8_container"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ortho_9"
        android:id="@+id/orthographyButton9" />

    <LinearLayout
        android:id="@+id/orthographyButton9_sub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_9_36"
            android:id="@+id/ortho9mainButton1"
            style="@style/RulebookButtonEveryThemeTop"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_9_37"
            android:id="@+id/ortho9mainButton2" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_9_38"
            android:id="@+id/ortho9mainButton3" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ortho_9_39"
            style="@style/RulebookButtonEveryThemeBottom"
            android:id="@+id/ortho9mainButton4"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>
