<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/punctuationButton5_container"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punct_6"
        android:id="@+id/punctuationButton6"/>

    <LinearLayout
        android:id="@+id/punctuationButton6_sub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:id="@+id/punct6mainButton1"
            style="@style/RulebookButtonEveryThemeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_6_22" />

        <Button
            android:id="@+id/punct6mainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_6_23" />

        <Button
            android:id="@+id/punct6mainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_6_24"
            style="@style/RulebookButtonEveryThemeBottom"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>