<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/punctuationButton6_container"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punct_7"
        android:id="@+id/punctuationButton7"/>

    <LinearLayout
        android:id="@+id/punctuationButton7_sub_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

        <Button
            android:id="@+id/punct7mainButton1"
            style="@style/RulebookButtonEveryThemeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_7_25" />

        <Button
            android:id="@+id/punct7mainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_7_26" />

        <Button
            android:id="@+id/punct7mainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punct_7_27"
            style="@style/RulebookButtonEveryThemeBottom"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_space_height"/>

    </LinearLayout>
</LinearLayout>