<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<include
				layout="@layout/ortho_1"
				android:id="@+id/orthographyButton1_container"/>

			<include
				layout="@layout/ortho_2"
				android:id="@+id/orthographyButton2_container"/>

			<include
				layout="@layout/ortho_3"
				android:id="@+id/orthographyButton3_container"/>

			<include
				layout="@layout/ortho_4"
				android:id="@+id/orthographyButton4_container"/>

			<include
				layout="@layout/ortho_5"
				android:id="@+id/orthographyButton5_container"/>

			<include
				layout="@layout/ortho_6"
				android:id="@+id/orthographyButton6_container"/>

			<include
				layout="@layout/ortho_7"
				android:id="@+id/orthographyButton7_container"/>

			<include
				layout="@layout/ortho_8"
				android:id="@+id/orthographyButton8_container"/>

			<include
				layout="@layout/ortho_9"
				android:id="@+id/orthographyButton9_container"/>

			<include
				layout="@layout/ortho_10"
				android:id="@+id/orthographyButton10_container"/>

			<include
				layout="@layout/ortho_11"
				android:id="@+id/orthographyButton11_container"/>

			<include
				layout="@layout/ortho_12"
				android:id="@+id/orthographyButton12_container"/>

			<include
				layout="@layout/ortho_13"
				android:id="@+id/orthographyButton13_container"/>

			<include
				layout="@layout/ortho_14"
				android:id="@+id/orthographyButton14_container"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ortho_15"
				android:layout_below="@id/orthographyButton14_container"
				android:id="@+id/orthographyButton15" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ortho_16"
				android:layout_below="@id/orthographyButton15"
				android:id="@+id/orthographyButton16" />

			<include
				layout="@layout/ortho_17"
				android:id="@+id/orthographyButton17_container"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ortho_18"
				android:layout_below="@id/orthographyButton17_container"
				android:id="@+id/orthographyButton18" />

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ortho_19"
				android:layout_below="@id/orthographyButton18"
				android:id="@+id/orthographyButton19"
				style="@style/RulebookButtonEveryThemeBottom"/>

		</RelativeLayout>

</ScrollView>


